plugins {
    id 'java-library'
    id 'maven-publish'
    id 'net.neoforged.moddev' version '2.0.141'
    id 'idea'
}

version = mod_version
group = mod_group_id

base {
    archivesName = mod_id
}

java {
    toolchain.languageVersion = JavaLanguageVersion.of(21)
    withSourcesJar()
}

sourceSets.main.resources {
    srcDir 'src/generated/resources'
    exclude '**/*.bbmodel'
    exclude 'src/generated/**/.cache'
}

sourceSets.main.java {
    // 1.21 port: optional-mod integrations (JEI, CraftTweaker, Curios, Botania) are
    // excluded until the mod itself compiles and their 1.21 APIs are brought back.
    exclude 'hellfirepvp/astralsorcery/common/integration/**'
}

repositories {
    mavenLocal()
    mavenCentral()

    maven {
        name = 'Curios'
        url = 'https://maven.theillusivec4.top/'
    }
    maven {
        name = 'BlameJared'
        url = 'https://maven.blamejared.com/'
    }
    maven {
        name = 'JEI'
        url = 'https://maven.blamejared.com/'
    }
}

neoForge {
    version = neo_version

    parchment {
        mappingsVersion = parchment_mappings_version
        minecraftVersion = parchment_minecraft_version
    }

    accessTransformers = project.files('src/main/resources/META-INF/accesstransformer.cfg')

    runs {
        client {
            client()
            systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
        }

        server {
            server()
            programArgument '--nogui'
            systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
        }

        gameTestServer {
            type = 'gameTestServer'
            systemProperty 'neoforge.enabledGameTestNamespaces', mod_id
        }

        data {
            data()
            programArguments.addAll(
                    '--mod', mod_id,
                    '--all',
                    '--output', file('src/generated/resources/').absolutePath,
                    '--existing', file('src/main/resources/').absolutePath
            )
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.INFO
        }
    }

    mods {
        "${mod_id}" {
            sourceSet sourceSets.main
        }
    }
}

configurations {
    runtimeClasspath.extendsFrom localRuntime
}

// Porting aid: show every compile error instead of javac's first 100.
tasks.withType(JavaCompile).configureEach {
    options.compilerArgs.addAll(['-Xmaxerrs', '10000'])
}

dependencies {
    // ObserverLib 1.21.1 port, published from D:\git\ObserverLib (branch port/1.21.1)
    // via `gradlew publishToMavenLocal`.
    implementation "hellfirepvp.observerlib:observerlib:${observerlib_version}"

    // Optional integrations are reintroduced subsystem-by-subsystem during the port.
    // Keeping their repositories here makes each integration an isolated build change.
}

def generateModMetadata = tasks.register('generateModMetadata', ProcessResources) {
    def replaceProperties = [
            minecraft_version      : minecraft_version,
            minecraft_version_range: minecraft_version_range,
            neo_version            : neo_version,
            loader_version_range   : loader_version_range,
            mod_id                 : mod_id,
            mod_name               : mod_name,
            mod_license            : mod_license,
            mod_version            : mod_version
    ]
    inputs.properties replaceProperties
    expand replaceProperties
    from 'src/main/templates'
    into layout.buildDirectory.dir('generated/sources/modMetadata')
}

sourceSets.main.resources.srcDir generateModMetadata
neoForge.ideSyncTask generateModMetadata

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8'
    options.release = 21
}

tasks.named('jar', Jar).configure {
    manifest {
        attributes(
                'Specification-Title': mod_name,
                'Specification-Vendor': 'HellFirePvP',
                'Specification-Version': '2',
                'Implementation-Title': project.name,
                'Implementation-Version': project.version,
                'Implementation-Vendor': 'HellFirePvP'
        )
    }
}

publishing {
    publications {
        register('mavenJava', MavenPublication) {
            from components.java
        }
    }
}

idea {
    module {
        downloadSources = true
        downloadJavadoc = true
    }
}
